@@ -4,6 +4,7 @@ Unreleased
 - Set Python version support to 3.10 through 3.13
 - Set Django version support to 4.2 through 5.2
 - Modernize packaging to use `pyproject.toml`
+- Remove deprecated `DjangoObjectPermissionsFilter`
 
 0.3.0 (2019-08-01)
 ==================
